--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/image": "^0.7.1",
     "@nuxtjs/strapi": "^1.6.1",
     "@nuxtjs/tailwindcss": "^6.1.1",
     "nuxt": "3.0.0-rc.12",
